arm64: DT: Introduce support for SDM845 and SoMC Tama platform
This is an import of the SDM845 DTs and of the entire SoMC Tama
platform support (along with Akari, Apollo and Akatsuki)
from the Open Devices kernel 4.9 LE.UM.2.3.2.r1.4, as of the
latest HEAD.

This does only include SDM845 v2 and v2.1 support, without
the hdk, cdp, qrd (etc) DTs. It also includes some cleanup
to keep the files count lower, since there were some things
that are really not needed.

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -36,6 +36,35 @@ dtb-$(CONFIG_ARCH_SM8150)	+= sm8150-cdp.dtb \
 
 endif
 
+
+ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
+dtbo-$(CONFIG_MACH_SONY_AKARI) += \
+		sdm845-tama-akari_generic-overlay.dtbo \
+		sdm845-v2-tama-akari_generic-overlay.dtbo \
+		sdm845-v2.1-tama-akari_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_AKATSUKI) += \
+		sdm845-tama-akatsuki_generic-overlay.dtbo \
+		sdm845-v2-tama-akatsuki_generic-overlay.dtbo \
+		sdm845-v2.1-tama-akatsuki_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_APOLLO) += \
+		sdm845-tama-apollo_generic-overlay.dtbo \
+		sdm845-v2-tama-apollo_generic-overlay.dtbo \
+		sdm845-v2.1-tama-apollo_generic-overlay.dtbo
+
+sdm845-tama-akari_generic-overlay.dtbo-base := sdm845.dtb
+sdm845-v2-tama-akari_generic-overlay.dtbo-base := sdm845-v2.dtb
+sdm845-v2.1-tama-akari_generic-overlay.dtbo-base := sdm845-v2.1.dtb
+
+sdm845-tama-akatsuki_generic-overlay.dtbo-base := sdm845.dtb
+sdm845-v2-tama-akatsuki_generic-overlay.dtbo-base := sdm845-v2.dtb
+sdm845-v2.1-tama-akatsuki_generic-overlay.dtbo-base := sdm845-v2.1.dtb
+
+sdm845-tama-apollo_generic-overlay.dtbo-base := sdm845.dtb
+sdm845-v2-tama-apollo_generic-overlay.dtbo-base := sdm845-v2.dtb
+sdm845-v2.1-tama-apollo_generic-overlay.dtbo-base := sdm845-v2.1.dtb
+endif
+
+
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 	dtbo-$(CONFIG_ARCH_SDMSHRIKE) += \
 		sdmshrike-cdp-overlay.dtbo \
