arm64: DT: Tama: Fix DT inclusion paths
Including arch/arm64/boot/dts/qcom/../qcom is not allowed on
kernel 4.14 and.. well, it's stupid, anyway...

--- a/arch/arm64/boot/dts/qcom/sdm845-tama-akatsuki_generic.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-tama-akatsuki_generic.dts
@@ -20,9 +20,9 @@
 
 /dts-v1/;
 
-#include "../qcom/sdm845.dtsi"
-#include "../qcom/sdm845-sde-display.dtsi"
-#include "../qcom/sdm845-mtp.dtsi"
+#include "sdm845.dtsi"
+#include "sdm845-sde-display.dtsi"
+#include "sdm845-mtp.dtsi"
 #include "sdm845-tama-akatsuki_generic.dtsi"
 
 / {
