--- a/arch/arm64/boot/dts/qcom/sdm845-v2-tama-akatsuki_generic-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-v2-tama-akatsuki_generic-overlay.dts
@@ -26,9 +26,9 @@
 #include <dt-bindings/clock/qcom,rpmh.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
-#include "../qcom/sdm845-sde-display.dtsi"
-#include "../qcom/sdm845-mtp.dtsi"
-#include "../qcom/sdm845-audio-overlay.dtsi"
+#include "sdm845-sde-display.dtsi"
+#include "sdm845-mtp.dtsi"
+#include "sdm845-audio-overlay.dtsi"
 #include "sdm845-tama-akatsuki_generic.dtsi"
 
 / {
