--- a/arch/arm64/boot/dts/qcom/sdm845-v2.1-tama-akatsuki_generic.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-v2.1-tama-akatsuki_generic.dts
@@ -19,9 +19,9 @@
 
 /dts-v1/;
 
-#include "../qcom/sdm845-v2.1.dtsi"
-#include "../qcom/sdm845-sde-display.dtsi"
-#include "../qcom/sdm845-mtp.dtsi"
+#include "sdm845-v2.1.dtsi"
+#include "sdm845-sde-display.dtsi"
+#include "sdm845-mtp.dtsi"
 #include "sdm845-tama-akatsuki_generic.dtsi"
 
 / {
