--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-akari.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-akari.dtsi
@@ -180,3 +180,11 @@
 		};
 	};
 };
+
+&sde_dsi_tama_panels {
+	/* Default panel */
+	qcom,dsi-panel = <&dsi_3>;
+
+	/* Possible panels */
+	somc,dsi-panel-list = <&dsi_3 &dsi_7>;
+};
