arm64: DT: Tama: Disable extra displays
Some qcom defined displays got in: disable them.

--- a/arch/arm64/boot/dts/qcom/sdm845-tama-common-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-tama-common-display.dtsi
@@ -173,6 +173,10 @@
 	status = "disabled";
 };
 
+&dsi_dual_nt36850_truly_cmd_display {
+	status = "disabled";
+};
+
 &dsi_sim_vid_display {
 	/delete-property/ qcom,dsi-display-active;
 	status = "disabled";
@@ -190,6 +194,10 @@
 
 &dsi_dual_sim_cmd_display {
 	/delete-property/ qcom,dsi-display-active;
+	status = "disabled";
+};
+
+&dsi_dual_sim_dsc_375_cmd_display {
 	status = "disabled";
 };
 
