--- a/arch/arm64/boot/dts/qcom/sdm845-camera.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-camera.dtsi
@@ -458,6 +458,7 @@
 		qcom,axi-port-list {
 			qcom,axi-port1 {
 				qcom,axi-port-name = "cam_hf_1";
+				ib-bw-voting-needed;
 				qcom,axi-port-mnoc {
 					qcom,msm-bus,name = "cam_hf_1_mnoc";
 					qcom,msm-bus-vector-dyn-vote;
@@ -483,6 +484,7 @@
 			};
 			qcom,axi-port2 {
 				qcom,axi-port-name = "cam_hf_2";
+				ib-bw-voting-needed;
 				qcom,axi-port-mnoc {
 					qcom,msm-bus,name = "cam_hf_2_mnoc";
 					qcom,msm-bus-vector-dyn-vote;
