arm64: dts: SoMC: Akatsuki: Set SDE to max performance mode
This device has issues with the userspace libdisplayqos as
it will lock up the device due to a totally wrong calculation
of the bus bandwidth and MDP clock rates.

For this reason, sadly say NO to the battery improvements and
ramp up to the sky both busses and MDP clocks while the display
is on.

Signed-off-by: voidanix <voidanix@keyedlimepie.org>

--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-akatsuki.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-akatsuki.dtsi
@@ -20,6 +20,11 @@
 #include "dsi-panel-somc-atmel-lgd-1440p2880-cmd.dtsi"
 #include "dsi-panel-somc-akatsuki-id5_pcc.dtsi"
 
+&mdss_mdp {
+	/* Set SDE MAX performance */
+	qcom,sde-perf-default-mode = <3>;
+};
+
 &mdss_dsi0 {
 	/delete-property/ qcom,null-insertion-enabled;
 };
