--- a/arch/arm64/boot/dts/qcom/sdm845-tama-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-tama-common.dtsi
@@ -562,6 +562,9 @@
 
 &pmi8998_pdphy {
 	vbus-supply = <&smb2_vbus>;
+
+	qcom,default-sink-caps = <5000 2000>, /* 5V @ 2A */
+				 <9000 1700>; /* 9V @ 1.7A */
 };
 
 &pmi8998_rradc {
