--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -237,52 +237,58 @@ config MSM_GCC_8998
 	  Say Y if you want to use peripheral devices such as UART, SPI,
 	  i2c, USB, UFS, SD/eMMC, PCIe, etc.
 
-config SDM_GCC_845
+config MSM_GCC_SDM845
 	tristate "SDM845 Global Clock Controller"
-	select QCOM_GDSC
 	depends on COMMON_CLK_QCOM
+	select QCOM_GDSC
 	help
-	  Support for the global clock controller on SDM845 devices.
+	  Support for the global clock controller on Qualcomm Technologies, Inc
+	  sdm845 devices.
 	  Say Y if you want to use peripheral devices such as UART, SPI,
-	  i2C, USB, UFS, SDDC, PCIe, etc.
+	  i2c, USB, UFS, SD/eMMC, PCIe, etc.
 
-config SDM_VIDEOCC_845
-	tristate "SDM845 Video Clock Controller"
+config MSM_CAMCC_SDM845
+	tristate "SDM845 Camera Clock Controller"
 	depends on COMMON_CLK_QCOM
-	select SDM_GCC_845
-	select QCOM_GDSC
 	help
-	  Support for the video clock controller on SDM845 devices.
-	  Say Y if you want to support video devices and functionality such as
-	  video encode and decode.
+	  Support for the camera clock controller on Qualcomm Technologies, Inc
+	  sdm845 devices.
+	  Say Y if you want to support camera devices and functionality such as
+	  capturing pictures.
 
-config SDM_DISPCC_845
+config MSM_DEBUGCC_SDM845
+	tristate "SDM845 Debug Clock Controller"
+	depends on COMMON_CLK_QCOM
+	help
+	  Support for the debug clock controller on Qualcomm Technologies, Inc
+	  sdm845 devices.
+	  Say Y if you want to support the clock measurement functionality.
+
+config MSM_DISPCC_SDM845
 	tristate "SDM845 Display Clock Controller"
-	select SDM_GCC_845
 	depends on COMMON_CLK_QCOM
 	help
 	  Support for the display clock controller on Qualcomm Technologies, Inc
-	  SDM845 devices.
+	  sdm845 devices.
 	  Say Y if you want to support display devices and functionality such as
 	  splash screen.
 
-config SPMI_PMIC_CLKDIV
-	tristate "SPMI PMIC clkdiv Support"
-	depends on (COMMON_CLK_QCOM && SPMI) || COMPILE_TEST
+config MSM_GPUCC_SDM845
+	tristate "SDM845 Graphics Clock Controller"
+	depends on MSM_GCC_SDM845
 	help
-	  This driver supports the clkdiv functionality on the Qualcomm
-	  Technologies, Inc. SPMI PMIC. It configures the frequency of
-	  clkdiv outputs of the PMIC. These clocks are typically wired
-	  through alternate functions on GPIO pins.
+	  Support for the graphics clock controller on Qualcomm Technologies, Inc.
+	  sdm845 devices.
+	  Say Y if you want to support graphics controller devices.
 
-config MSM_CLK_AOP_QMP
-	tristate "AOP QMP Clock Driver"
-	depends on COMMON_CLK_QCOM && MSM_QMP
+config MSM_VIDEOCC_SDM845
+	tristate "SDM845 Video Clock Controller"
+	depends on COMMON_CLK_QCOM
 	help
-	Always On Processor manages few shared clocks on some Qualcomm
-	Technologies, Inc. SoCs. It accepts requests from other hardware
-	subsystems via QMP mailboxes.
-	Say Y to support the clocks managed by AOP on platforms such as sdm845.
+	  Support for the video clock controller on Qualcomm Technologies, Inc
+	  sdm845 devices.
+	  Say Y if you want to support video devices and functionality such as
+	  video encode/decode.
 
 config MSM_GCC_KONA
 	tristate "KONA Global Clock Controller"
