misc: Initial kernel panic through power key driver
This driver contains kernel force crash functionality
through power key. Triggers panic if power key is hold
for more than 10secs.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -83,3 +83,4 @@ obj-$(CONFIG_KINECTICS_XR_NORDIC) += kxrctrl/
 
 obj-y				 += pn553/
 obj-$(CONFIG_SONY_EXT_UIM_CTRL)  += sony_ext_uim_ctrl.o
+obj-$(CONFIG_POWERKEY_FORCECRASH)	+= powerkey_forcecrash.o
