--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -214,6 +214,39 @@ config TOUCHSCREEN_CHIPONE_ICN8505
 	  To compile this driver as a module, choose M here: the
 	  module will be called chipone_icn8505.
 
+config TOUCHSCREEN_CLEARPAD_CORE
+	tristate "Clearpad Touchscreen core driver module"
+	help
+	  Say Y here if you have a Synaptics Touchscreen.
+	
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called clearpad_core.
+
+config TOUCHSCREEN_CLEARPAD_I2C
+	tristate "Clearpad Touchscreen I2C bus module"
+	depends on TOUCHSCREEN_CLEARPAD_CORE && I2C
+	help
+	  Say Y here if the touchscreen is connected via I2C bus.
+		
+	  If unsure, say N.
+	
+	  To compile this driver as a module, choose M here: the
+	  module will be called clearpad_i2c.
+
+
+config TOUCHSCREEN_CLEARPAD_RMI_DEV
+	tristate "Clearpad Touchscreen RMI device module"
+	depends on TOUCHSCREEN_CLEARPAD_CORE
+	help
+	  Say Y here to enable support for direct RMI register access.
+			
+	  If unsure, say N.
+		
+	  To compile this driver as a module, choose M here: the
+	  module will be called clearpad_rmi_dev.
+
 config TOUCHSCREEN_CY8CTMG110
 	tristate "cy8ctmg110 touchscreen"
 	depends on I2C
