--- a/arch/arm64/configs/aosp_tama_apollo_defconfig
+++ b/arch/arm64/configs/aosp_tama_apollo_defconfig
@@ -746,6 +746,7 @@ CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_ARM_GIC_V3_REDISTRIBUTOR_HACK=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
 CONFIG_STM=y
 CONFIG_SENSORS_SSC=y
 CONFIG_EXT4_FS=y
