--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -4122,21 +4122,21 @@
 &clock_cpucc {
 	#address-cells = <1>;
 	#size-cells = <1>;
-	lmh_dcvs0: qcom,limits-dcvs@0 {
+	lmh_dcvs0: qcom,limits-dcvs@17d78800 {
 		compatible = "qcom,msm-hw-limits";
 		interrupts = <GIC_SPI 32 IRQ_TYPE_LEVEL_HIGH>;
 		qcom,affinity = <0>;
-		reg = <0x17D78800 0x1000>,
-			<0x17D43000 0x1000>;
+		reg = <0x17d78800 0x1000>,
+			<0x17d43000 0x1000>;
 		#thermal-sensor-cells = <0>;
 	};
 
-	lmh_dcvs1: qcom,limits-dcvs@1 {
+	lmh_dcvs1: qcom,limits-dcvs@17d70800 {
 		compatible = "qcom,msm-hw-limits";
 		interrupts = <GIC_SPI 33 IRQ_TYPE_LEVEL_HIGH>;
 		qcom,affinity = <1>;
-		reg = <0x17D70800 0x1000>,
-			<0x17D45800 0x1000>;
+		reg = <0x17d70800 0x1000>,
+			<0x17d45800 0x1000>;
 		#thermal-sensor-cells = <0>;
 		isens_vref-supply = <&pm8998_l1_ao>;
 		isens-vref-settings = <880000 880000 20000>;
