arm64: dts: qcom: sdm845: Use legacy LMh props
Devices running sdm845 and older require two props to achieve performance
comparable to the one on older kernels.

Many thanks to Roberto Sartori for pointing out the issue. Tested on
akatsuki to confirm the findings.

Link: https://github.com/sonyxperiadev/kernel/issues/2585
Signed-off-by: voidanix <voidanix@keyedlimepie.org>

--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -4129,6 +4129,8 @@
 		reg = <0x17d78800 0x1000>,
 			<0x17d43000 0x1000>;
 		#thermal-sensor-cells = <0>;
+		qcom,plat-mitigation-disable;
+		qcom,legacy-lmh-enable;
 	};
 
 	lmh_dcvs1: qcom,limits-dcvs@17d70800 {
@@ -4138,8 +4140,8 @@
 		reg = <0x17d70800 0x1000>,
 			<0x17d45800 0x1000>;
 		#thermal-sensor-cells = <0>;
-		isens_vref-supply = <&pm8998_l1_ao>;
-		isens-vref-settings = <880000 880000 20000>;
+		qcom,plat-mitigation-disable;
+		qcom,legacy-lmh-enable;
 	};
 
 	wil6210: qcom,wil6210 {
