--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -2285,6 +2285,11 @@
 				<SLEEP_TCS     3>,
 				<WAKE_TCS      3>,
 				<CONTROL_TCS   1>;
+
+		msm_bus_apps_rsc {
+			compatible = "qcom,msm-bus-rsc";
+			qcom,msm-bus-id = <MSM_BUS_RSC_APPS>;
+		};
 	};
 
 	disp_rsc: rsc@af20000 {
@@ -2299,6 +2304,11 @@
 				<SLEEP_TCS 1>,
 				<WAKE_TCS    1>,
 				<CONTROL_TCS 1>;
+
+		msm_bus_disp_rsc {
+			compatible = "qcom,msm-bus-rsc";
+			qcom,msm-bus-id = <MSM_BUS_RSC_DISP>;
+		};
 	};
 
 	qcom,smp2p_sleepstate {
