--- a/arch/arm64/boot/dts/qcom/sdm845-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-regulator.dtsi
@@ -29,13 +29,11 @@
 	};
 };
 
-&soc {
-	/* RPMh regulators: */
-
+/* RPMh regulators */
+&apps_rsc {
 	/* PM8998 S1 = VDD_EBI supply */
 	rpmh-regulator-ebilvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ebi.lvl";
 		pm8998_s1_level: regulator-s1 {
 			regulator-name = "pm8998_s1_level";
@@ -54,7 +52,6 @@
 
 	rpmh-regulator-smpa2 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "smpa2";
 		pm8998_s2: regulator-s2 {
 			regulator-name = "pm8998_s2";
@@ -67,7 +64,6 @@
 
 	rpmh-regulator-smpa3 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "smpa3";
 		pm8998_s3: regulator-s3 {
 			regulator-name = "pm8998_s3";
@@ -80,7 +76,6 @@
 
 	rpmh-regulator-smpa5 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "smpa5";
 		pm8998_s5: regulator-s5 {
 			regulator-name = "pm8998_s5";
@@ -94,7 +89,6 @@
 	/* PM8998 S6 = VDD_MX supply */
 	rpmh-regulator-mxlvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "mx.lvl";
 		pm8998_s6_level: regulator-s6-level {
 			regulator-name = "pm8998_s6_level";
@@ -121,7 +115,6 @@
 
 	rpmh-regulator-smpa7 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "smpa7";
 		pm8998_s7: regulator-s7 {
 			regulator-name = "pm8998_s7";
@@ -135,7 +128,6 @@
 	/* PM8998 S9 + S8 = VDD_CX supply */
 	rpmh-regulator-cxlvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "cx.lvl";
 		pm8998_s9_level-parent-supply = <&pm8998_s6_level>;
 		pm8998_s9_level_ao-parent-supply = <&pm8998_s6_level_ao>;
@@ -165,7 +157,6 @@
 
 	rpmh-regulator-ldoa1 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa1";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -206,7 +197,6 @@
 
 	rpmh-regulator-ldoa2 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa2";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -226,7 +216,6 @@
 
 	rpmh-regulator-ldoa3 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa3";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -246,7 +235,6 @@
 	/* PM8998 L4 = VDD_SSC_MX supply */
 	rpmh-regulator-lmxlvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "lmx.lvl";
 		pm8998_l4_level: regulator-l4-level {
 			regulator-name = "pm8998_l4_level";
@@ -258,7 +246,6 @@
 
 	rpmh-regulator-ldoa5 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa5";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -277,7 +264,6 @@
 
 	rpmh-regulator-ldoa6 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa6";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -296,7 +282,6 @@
 
 	rpmh-regulator-ldoa7 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa7";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -315,7 +300,6 @@
 
 	rpmh-regulator-ldoa8 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa8";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -334,7 +318,6 @@
 
 	rpmh-regulator-ldoa9 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa9";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -353,7 +336,6 @@
 
 	rpmh-regulator-ldoa10 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa10";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -372,7 +354,6 @@
 
 	rpmh-regulator-ldoa11 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa11";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -391,7 +372,6 @@
 
 	rpmh-regulator-ldoa12 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa12";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -410,7 +390,6 @@
 
 	rpmh-regulator-ldoa13 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa13";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -429,7 +408,6 @@
 
 	rpmh-regulator-ldoa14 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa14";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -451,7 +429,6 @@
 
 	rpmh-regulator-ldoa15 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa15";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -470,7 +447,6 @@
 
 	rpmh-regulator-ldoa16 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa16";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -489,7 +465,6 @@
 
 	rpmh-regulator-ldoa17 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa17";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -508,7 +483,6 @@
 
 	rpmh-regulator-ldoa18 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa18";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -527,7 +501,6 @@
 
 	rpmh-regulator-ldoa19 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa19";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -546,7 +519,6 @@
 
 	rpmh-regulator-ldoa20 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa20";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -565,7 +537,6 @@
 
 	rpmh-regulator-ldoa21 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa21";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -584,7 +555,6 @@
 
 	rpmh-regulator-ldoa22 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa22";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -603,7 +573,6 @@
 
 	rpmh-regulator-ldoa23 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa23";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -622,7 +591,6 @@
 
 	rpmh-regulator-ldoa24 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa24";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -642,7 +610,6 @@
 
 	rpmh-regulator-ldoa25 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa25";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -661,7 +628,6 @@
 
 	rpmh-regulator-ldoa26 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa26";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -684,7 +650,6 @@
 	/* PM8998 L27 = VDD_SSC_CX supply */
 	rpmh-regulator-lcxlvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "lcx.lvl";
 		pm8998_l27_level: regulator-l27-level {
 			regulator-name = "pm8998_l27_level";
@@ -696,7 +661,6 @@
 
 	rpmh-regulator-ldoa28 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "ldoa28";
 		qcom,regulator-type = "pmic4-ldo";
 		qcom,supported-modes =
@@ -715,7 +679,6 @@
 
 	rpmh-regulator-vsa1 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "vsa1";
 		pm8998_lvs1: regulator-lvs1 {
 			regulator-name = "pm8998_lvs1";
@@ -727,7 +690,6 @@
 
 	rpmh-regulator-vsa2 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "vsa2";
 		pm8998_lvs2: regulator-lvs2 {
 			regulator-name = "pm8998_lvs2";
@@ -739,7 +701,6 @@
 
 	rpmh-regulator-bobb1 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "bobb1";
 		qcom,regulator-type = "pmic4-bob";
 		qcom,send-defaults;
@@ -766,7 +727,6 @@
 	/* PM8005 S1 + S4 = 2 phase VDD_GFX supply */
 	rpmh-regulator-gfxlvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "gfx.lvl";
 		pm8005_s1_level: regulator-s1-level {
 			regulator-name = "pm8005_s1_level";
@@ -783,7 +743,6 @@
 	/* PM8005 S2 = VDD_MODEM supply */
 	rpmh-regulator-msslvl {
 		compatible = "qcom,rpmh-arc-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "mss.lvl";
 		pm8005_s2_level: regulator-s2-level {
 			regulator-name = "pm8005_s2_level";
@@ -795,7 +754,6 @@
 
 	rpmh-regulator-smpc3 {
 		compatible = "qcom,rpmh-vrm-regulator";
-		mboxes = <&apps_rsc 0>;
 		qcom,resource-name = "smpc3";
 		pm8005_s3: regulator-s3 {
 			regulator-name = "pm8005_s3";
@@ -805,9 +763,11 @@
 			qcom,init-voltage = <600000>;
 		};
 	};
+};
 
+&soc {
 	refgen: refgen-regulator@ff1000 {
-		compatible = "qcom,refgen-regulator";
+		compatible = "qcom,refgen-sdm845-regulator";
 		reg = <0xff1000 0x60>;
 		regulator-name = "refgen";
 		regulator-enable-ramp-delay = <5>;
