--- a/arch/arm64/boot/dts/qcom/sdm845-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-v2.dtsi
@@ -22,7 +22,9 @@
 	/delete-property/ qcom,sdr104-wa;
 };
 
-/delete-node/ &pdc;
+&pdc {
+	qcom,pdc-ranges = <0 480 94>, <94 609 15>, <115 630 7>;
+};
 
 &tlmm {
 	compatible = "qcom,sdm845-pinctrl-v2";
@@ -64,14 +66,6 @@
 	gpu_gx_sw_reset: syscon@5091008 {
 		compatible = "syscon";
 		reg = <0x5091008 0x4>;
-	};
-
-	pdc: interrupt-controller@b220000{
-		compatible = "qcom,pdc-sdm845-v2";
-		reg = <0xb220000 0x400>;
-		#interrupt-cells = <3>;
-		interrupt-parent = <&intc>;
-		interrupt-controller;
 	};
 
 	llcc_bw_opp_table_v2: llcc-bw-opp-table-sdm845-v2 {
