arm64:sdm845-tama-common: configure the RGB LED nodes used by the QPNP LED driver. Taken from OnePlus 4.14 kernel Credits : @roberto-sartori-gl for porting it to OnePlus 5 series.

--- a/arch/arm64/boot/dts/qcom/sdm845-tama-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845-tama-common.dtsi
@@ -651,40 +651,80 @@
 		qcom,rgb_sync = <1>;
 	};
 
-	qcom,leds-xboot@d800 {
-		compatible = "qcom,qpnp-wled";
-		reg = <0xd800 0x100>,
-		      <0xd900 0x100>;
-		reg-names = "qpnp-wled-ctrl-base",
-			    "qpnp-wled-sink-base";
-		interrupts = <0x3 0xd8 0x1 IRQ_TYPE_EDGE_RISING>,
-			     <0x3 0xd8 0x2 IRQ_TYPE_EDGE_RISING>;
-		interrupt-names = "ovp-irq", "sc-irq";
-		linux,name = "wled";
-		linux,default-trigger = "bkl-trigger";
-		qcom,fdbk-output = "auto";
-		qcom,vref-uv = <127500>;
-		qcom,switch-freq-khz = <800>;
-		qcom,ovp-mv = <29600>;
-		qcom,ilim-ma = <970>;
-		qcom,boost-duty-ns = <26>;
-		qcom,mod-freq-khz = <9600>;
-		qcom,dim-mode = "hybrid";
-		qcom,hyb-thres = <625>;
-		qcom,sync-dly-us = <800>;
-		qcom,fs-curr-ua = <20000>;
-		qcom,cons-sync-write-delay-us = <1000>;
-		qcom,led-strings-list = [00 01 02 03];
-		qcom,en-ext-pfet-sc-pro;
-		qcom,pmic-revid = <&pmi8998_revid>;
-		qcom,loop-auto-gm-en;
-		qcom,auto-calibration-enable;
-		somc,init-br-ua = <1200>;
-		somc-s1,br-power-save-ua = <800>;
-		somc,bl-scale-enabled;
-		somc,area_count_table_size = <0>;
-		status = "okay";
-	};
+       qcom,leds-xboot@d800 {
+               compatible = "qcom,qpnp-wled";
+               reg = <0xd800 0x100>,
+                     <0xd900 0x100>;
+               reg-names = "qpnp-wled-ctrl-base",
+                           "qpnp-wled-sink-base";
+               interrupts = <0x3 0xd8 0x1 IRQ_TYPE_EDGE_RISING>,
+                            <0x3 0xd8 0x2 IRQ_TYPE_EDGE_RISING>;
+               interrupt-names = "ovp-irq", "sc-irq";
+               linux,name = "wled";
+               linux,default-trigger = "bkl-trigger";
+               qcom,fdbk-output = "auto";
+               qcom,vref-uv = <127500>;
+               qcom,switch-freq-khz = <800>;
+               qcom,ovp-mv = <29600>;
+               qcom,ilim-ma = <970>;
+               qcom,boost-duty-ns = <26>;
+               qcom,mod-freq-khz = <9600>;
+               qcom,dim-mode = "hybrid";
+               qcom,hyb-thres = <625>;
+               qcom,sync-dly-us = <800>;
+               qcom,fs-curr-ua = <25000>;
+               qcom,cons-sync-write-delay-us = <1000>;
+               qcom,led-strings-list = [00 01 02 03];
+               qcom,en-ext-pfet-sc-pro;
+               qcom,pmic-revid = <&pmi8998_revid>;
+               qcom,loop-auto-gm-en;
+               qcom,auto-calibration-enable;
+               somc,init-br-ua = <10000>;
+               somc-s1,br-power-save-ua = <800>;
+               somc,bl-scale-enabled;
+               somc,area_count_table_size = <0>;
+               status = "okay";
+       };
+
+};
+
+&red_led {
+	qcom,use-blink;
+	qcom,duty-pcts = [00 05 0a 0f 14 1d 28 32 3c 4b 64];
+	qcom,duty-ms = <20>;
+	qcom,start-idx = <1>;
+	qcom,idx-len = <11>;
+	qcom,lut-flags = <0x1f>;
+	qcom,ramp-step-ms = <100>;
+	qcom,pause-lo = <2000>;
+	qcom,pause-hi = <1000>;
+	/delete-property/ linux,default-trigger;
+};
+
+&green_led {
+	qcom,use-blink;
+	qcom,duty-pcts = [00 05 0a 0f 14 1d 28 32 3c 4b 64];
+	qcom,duty-ms = <20>;
+	qcom,start-idx = <13>;
+	qcom,idx-len = <11>;
+	qcom,lut-flags = <0x1f>;
+	qcom,ramp-step-ms = <100>;
+	qcom,pause-lo = <2000>;
+	qcom,pause-hi = <1000>;
+	/delete-property/ linux,default-trigger;
+};
+
+&blue_led {
+	qcom,use-blink;
+	qcom,duty-pcts = [00 05 0a 0f 14 1d 28 32 3c 4b 64];
+	qcom,duty-ms = <20>;
+	qcom,start-idx = <13>;
+	qcom,idx-len = <11>;
+	qcom,lut-flags = <0x1f>;
+	qcom,ramp-step-ms = <100>;
+	qcom,pause-lo = <2000>;
+	qcom,pause-hi = <1000>;
+	/delete-property/ linux,default-trigger;
 };
 
 &pmi8998_haptics {
